# Project2D

./: .clang-format  .gitmodules  CMakeLists.txt  README.md
Libs/GLAD/: CMakeLists.txt
Libs/GLAD/include/GLAD/: glad.h
Libs/GLAD/src/: glad.c
Libs/STB/: CMakeLists.txt
Libs/STB/include/STB/: default.cpp
Src/: Main.cpp
Src/Graphics/: Camera.cpp  Camera.hpp  Consts.hpp  ContextWindow.cpp  ContextWindow.hpp  RenderBuffer.cpp  RenderBuffer.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  Types.hpp  Vertex.hpp
Src/Input/: EventHandler.cpp  EventHandler.hpp  Keyboard.cpp  Keyboard.hpp  Types.hpp
Src/Math/: Mat4x4.hpp  Rect.hpp  Vec2.hpp
Src/System/: Clock.hpp  Time.hpp
Src/Utils/: Delegate.hpp  GLHelpers.hpp  Types.hpp
